add cards view in EpisodeDetails

--- a/src/components/pages/Characters/Characters.css
+++ b/src/components/pages/Characters/Characters.css
@@ -1,3 +1,9 @@
+.Characters {
+    width: 75%;
+    margin: 80px auto;
+}
+
+/*
 .CharactersContainer {
     margin: 80px auto;
     width: 75%;
@@ -5,7 +11,7 @@
 
 .CharactersContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
     grid-gap: 2vh;
 }
 
@@ -14,5 +20,6 @@
 }
 
 .CharactersContainer img {
-    max-width: 200px;
+    max-width: 150px;
 }
+*/
